Page MenuHome GnuPG

Dirmngr: Bad error message (regression) when no key is found on the keyserver
Closed, ResolvedPublic

Description

If a key is not found on the keyserver GnuPG 2.1 reports "No Data" as an error. This makes ist seem like something is broken.

gpg: error searching keyserver: No data
gpg: keyserver search failed: No data

While Gpg1 (and 2.0 afaik) reported no error but that the key was not found:

gpg: searching for "gdfklghfdkjghdfjkghdfjkg" from hkp server keys.gnupg.net
gpg: key "gdfklghfdkjghdfjkghdfjkg" not found on keyserver

Details

Version
master