gpg: In search-keys return "Not found" instead of "No Data".

* g10/keyserver.c (keyserver_search): Check for NO_DATA.
--

GnuPG-bug-id: 3830
Signed-off-by: Werner Koch <wk@gnupg.org>
(cherry picked from commit e7252ae57f3c9da557f23295268f74dd25fee3a1)